--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.datasource.url=jdbc:mysql://containers-us-west-44.railway.app:5678/eshop
+# spring.datasource.url=jdbc:mysql://containers-us-west-44.railway.app:5678/eshop
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/eshop
+spring.datasource.username=choteng
